--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: Run some tests
 on:
   workflow_dispatch:
     inputs:
-      environment:
+      working-directory:
         description: 'Environment to run the tests in'
         required: true
         default: 'terraform'
@@ -17,9 +17,17 @@ env:
   SECRET2: ${{ secrets.SECRET2 }}
 
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set environment
+        id: split
+        run: |
+          WD="${{ github.event.inputs.working-directory }}"
+            echo "environment=${WD##*/}" >> $GITHUB_ENV
   test:
     runs-on: windows-latest
-    environment: ${{ github.event.inputs.environment }}
+    environment: ${{ github.env.environment }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
