--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,10 @@ name: Run some tests
 on:
   workflow_dispatch:
     inputs:
-      working-directory:
+      environment:
+        description: 'Environment to run the tests in'
         required: true
+        default: 'terraform'
 
 permissions:
   contents: write
@@ -15,17 +17,9 @@ env:
   SECRET2: ${{ secrets.SECRET2 }}
 
 jobs:
-  setup:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set environment
-        id: split
-        run: |
-          WD="${{ inputs.working-directory }}"
-            echo "environment=${WD##*/}" >> $GITHUB_ENV
   test:
     runs-on: windows-latest
-    environment: ${{ github.env.environment }}
+    environment: ${{ github.event.inputs.environment }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
