--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,25 +20,25 @@ jobs:
           WD="${{ inputs.working-directory }}"
           echo "environment=${WD##*/}" >> "$GITHUB_OUTPUT"
           echo "${WD##*/}^"
-      - name: Set secrets
-        id: secret
-        run: |
-          echo "::add-mask::jobsecret2"
-          echo "SECRET2=jobsecret2" >> "$GITHUB_OUTPUT"
     outputs:
       environment: ${{ steps.split.outputs.environment }}
-      secret2: ${{ steps.secret.outputs.SECRET2 }}
   test:
     runs-on: windows-latest
     needs: setup
     environment: ${{ needs.setup.outputs.environment }}
     env:
       SECRET1: ${{ secrets.SECRET1 }}
-      SECRET2: ${{ needs.setup.outputs.secret2 }}
+      SECRET2: ${{ secrets.SECRET2 }}
     steps:
       - name: echo environment
         run: |
           echo ${{ needs.setup.outputs.environment }}
+      - name: get secrets
+        id: secrets
+        run: |
+          value=jobsecret2
+          echo "::add-mask::$value"
+          echo "SECRET2=$value" >> "$GITHUB_ENV"
       - name: Checkout
         uses: actions/checkout@v2
       - name: Test
