--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
       - name: get secrets
         id: secrets
         run: |
-          value=jobsecret2
+          value=$(echo jobabaaba)
           echo "::add-mask::$value"
           echo "SECRET2=$value" >> "$GITHUB_ENV"
       - name: Checkout
